[package]
name = "plutonium"
version = "0.1.1"
homepage = "https://plutonium.network"
description = "Solana program for Plutonium Network"
authors = ["Plutonium Developers <hello@plutonium.network>"]
repository = "https://github.com/plutonium-finance/plutonium-program"
readme = "README.md"
license = "AGPL-3.0-only"
edition = "2018"

[dependencies]
solana-program = "1.7.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.7.1"
solana-client = "1.7.1"
solana-sdk = "1.7.1"

[lib]
crate-type = ["cdylib", "lib"]
